--- a/Sources/Applications.tex
+++ b/Sources/Applications.tex
@@ -183,7 +183,7 @@ kind of value, we only define an evaluator and a pretty printer. We thus obtain
 The reader can refer to our supplementary material for the source code of the case study.
 
 
-\begin{figure}[t]
+\begin{table}[t]
   \centering
   \begin{small}
 \begin{tabular}{|l||c|c|c||c|c|c|c|c|c|}
@@ -207,7 +207,7 @@ The reader can refer to our supplementary material for the source code of the ca
   \end{small}
 \caption{Overview of the languages assembled}
 \label{fig:langs}
-\end{figure}
+\end{table}
 
 
 \section{Evaluation}
@@ -252,7 +252,7 @@ introduce significant complexity, as explained in \cref{sec:ob}.
 
 
 
-\begin{figure}[t]
+\begin{table}[t]
   \centering
   \begin{small}
   \begin{tabular}{|r|ccc||l|ccc|}
@@ -276,6 +276,6 @@ introduce significant complexity, as explained in \cref{sec:ob}.
     \hline
   \end{tabular}
   \end{small}
-  \caption{SLOC statistics: \sedel implementation vs vanilla AST implementation.}
+  \caption{SLOC statistics: \sedel implementation vs. vanilla AST implementation}
   \label{fig:sloc}
-\end{figure}
+\end{table}
