--- a/Sources/Traits/related.tex
+++ b/Sources/Traits/related.tex
@@ -2,7 +2,7 @@
 \label{sec:related}
 
 
-\subparagraph{Typed First-Class Classes/Mixins/Traits.}
+\paragraph{Typed First-Class Classes/Mixins/Traits.}
 First-class classes have been used in
 Racket~\cite{DBLP:conf/aplas/FlattFF06}, along with mixin support, and
 have shown great practical value. For example, DrRacket
@@ -161,7 +161,7 @@ As far as we know, \name is the first design for typed first-class traits.
 % left-associative operator which gives rightmost precedence to one
 % implementation when conflicts exist.
 
-\subparagraph{Mixin-Based Inheritance.}
+\paragraph{Mixin-Based Inheritance.}
 
 % Mixins have become very popular in many OO languages~\cite{flatt1998classes,bono1999core, ancona2003jam}.
 Bracha and Cook's seminal paper~\cite{bracha1990mixin} extends Modula-3 with
@@ -185,7 +185,7 @@ with intersection types and Bracha-Cook's merge operator~\cite{bracha1990mixin}.
 % records, thus limiting its expressive power.
 
 
-\subparagraph{Trait-Based Inheritance.}
+\paragraph{Trait-Based Inheritance.}
 
 
 Traits were proposed by Sch{\"a}rli et al.~\cite{scharli2003traits, Ducasse_2006} as a mechanism
@@ -264,7 +264,7 @@ of inheritance.
 % with most other approaches that use class-based composition, but closer to the
 % dynamic composition that we use in \name.
 
-\subparagraph{Languages with More Advanced Forms of Inheritance.}
+\paragraph{Languages with More Advanced Forms of Inheritance.}
 \textsc{Self}~\cite{ungar1988self} is a dynamically-typed, prototype-based
 language with a simple and uniform object model. \textsc{Self}'s inheritance
 model is typical of what we call \textit{mutable inheritance}, because an object's parent
@@ -345,7 +345,7 @@ a feature for changing the behavior of an object at runtime by replacing one tra
 % structural subtyping is more flexible from a component-based perspective. The
 % type system of \name chooses structural subtyping.
 
-\subparagraph{Module Systems.}
+\paragraph{Module Systems.}
 
 In parallel to OOP, the ML module system originally proposed by
 MacQueen~\cite{MacQueen_1984} also offers powerful support for flexible program
@@ -363,7 +363,7 @@ dispatching, which (generally speaking) are all missing features in module syste
 
 
 
-\subparagraph{Intersection Types, Polymorphism and Merge Construct.} There
+\paragraph{Intersection Types, Polymorphism and Merge Construct.} There
 is a large body of work on intersection types. Here we only talk about work that
 has direct influences on ours. Dunfield~\cite{dunfield2014elaborating} shows
 significant expressiveness of type systems with intersection types and a merge
