--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -39,7 +39,7 @@
 \newcommand{\step}{\longmapsto}
 
 
-\newcommand{\name}{\textsf{NeColus}\xspace}
+\newcommand{\name}{$\mathsf{NeColus}$\xspace}
 \newcommand{\namee}{$\lambda_{i}^{+}$\xspace}
 \newcommand\oname{$\lambda_{i}$\xspace}
 \newcommand\fname{$\mathsf{F}_{i}$\xspace}
