--- a/Sources/Poly/elaboration.tex
+++ b/Sources/Poly/elaboration.tex
@@ -31,6 +31,6 @@ The syntax is shown in \cref{fig:syntax:fco}.
 
 \drules[wft]{$[[ dd |- T   ]]$}{Well-formedness of types}{int, var, arrow,prod, all}
 
-\drules[step]{$[[ e --> e' ]]$}{Coercion reduction}{id, trans, top, arr, pair, topArr, distArr, projl, projr, forall}
+\drules[s]{$[[ e --> e' ]]$}{Coercion reduction}{id, trans, top, arr, pair, topArr, distArr, projl, projr, forall}
 
 \drules[Ft]{$[[ dd ; gg |- e : T ]]$}{Typing}{unit, int, var, abs, app, tabs, tapp, pair, capp}
