--- a/Sources/Traits/typesystem.tex
+++ b/Sources/Traits/typesystem.tex
@@ -103,7 +103,7 @@ types is straightforward.
   \centering
 \begin{small}
   \drules[SD]{$[[ SD |- AA ** BB ]]$}{Disjointness}{top, topSym, var, varSym, forall, rec, recn, arrow, andL, andR, trait, traitArrOne, traitArrTwo, ax}
-  \drules[Dax]{$[[ AA **a BB ]]$}{Disjointness axiom}{intTrait, traitForall, traitRec}
+  \drules[SDax]{$[[ AA **a BB ]]$}{Disjointness axiom}{intTrait, traitForall, traitRec}
 \end{small}
 \caption{Disjointness rules of \sedel (excerpt)}
   \label{fig:disjoint}
