--- a/Sources/Nested/overview.tex
+++ b/Sources/Nested/overview.tex
@@ -1,6 +1,6 @@
 
 \section{Overview}
-\label{sec:overview}
+\label{nested:sec:overview}
 
 This section illustrates \name with an encoding of a family polymorphism
 solution to the Expression Problem, and informally presents its salient
