--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1256,3 +1256,14 @@ keywords = "Featherweight Java, Trait, Type system"
     pages = {282--290},
     publisher = {IEEE Computer Society}
 }
+
+
+@article{cardelli1994extension,
+  title={An extension of system F with subtyping},
+  author={Cardelli, Luca and Martini, Simone and Mitchell, John C and Scedrov, Andre},
+  journal={Information and Computation},
+  volume={109},
+  number={1-2},
+  pages={4--56},
+  year={1994},
+}
