--- a/packages.tex
+++ b/packages.tex
@@ -39,7 +39,6 @@
   keywordstyle=\sffamily\bfseries,
   captionpos=none,
   columns=flexible,
-  lineskip=-1pt,
   keepspaces=true,
   showspaces=false,               % show spaces adding particular underscores
   showstringspaces=false,         % underline spaces within strings
@@ -55,7 +54,7 @@
 }
 
 \lstdefinelanguage{sedel}{
-  keywords={Int, String, this, inherits, super, type, Trait, override, new, if, then, else, let, in},
+  keywords={Int, Bool, String, this, inherits, super, type, Trait, override, new, if, then, else, let, in},
   identifierstyle=\color{black},
   morecomment=[l]{--},
   morecomment=[l]{//},
