--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1267,3 +1267,14 @@ keywords = "Featherweight Java, Trait, Type system"
   pages={4--56},
   year={1994},
 }
+
+@article{leivant1991finitely,
+  title={Finitely stratified polymorphism},
+  author={Leivant, Daniel},
+  journal={Information and Computation},
+  volume={93},
+  number={1},
+  pages={93--113},
+  year={1991},
+  publisher={Elsevier}
+}
