--- a/Sources/Poly/disjoint.tex
+++ b/Sources/Poly/disjoint.tex
@@ -1,7 +1,84 @@
 
 \section{Disjointness}
+\label{sec:disjoint:fi}
 
 
-\drules[FD]{$[[DD |- A ** B]]$}{Disjointness}{topL, topR, arr, andL, andR, rcdEq, rcdNeq, tvarL, tvarR, forall,ax}
+\begin{figure}[t]
+  \centering
+  \drules[FD]{$[[DD |- A ** B]]$}{Disjointness}{topL, topR, arr, andL, andR, rcdEq, rcdNeq, tvarL, tvarR, forall,ax}
+  \drules[Dax]{$[[A **a B]]$}{Disjointness axioms}{sym, intArr, intRcd,intAll,arrAll,arrRcd,allRcd}
+  \caption{Disjointness of \fnamee}
+  \label{fig:disjoint:fi}
+\end{figure}
 
-\drules[Dax]{$[[A **a B]]$}{Disjointness axioms}{sym, intArr, intRcd,intAll,arrAll,arrRcd,allRcd}
+
+In this section we present the formal rules for disjointness. As show in
+\cref{fig:disjoint:fi}, the disjointness rules of \fnamee are directly inherited
+from \fname, which consists of two judgments.
+
+
+\paragraph{Main judgment.}
+
+The main judgment $[[DD |- A ** B]]$ says that the two types $[[A]]$ and $[[B]]$
+are disjoint in the context $[[DD]]$. As a precondition, we require the two types $[[A]]$
+and $[[B]]$ are both well-formed in the context $[[DD]]$.
+Most of the rules are similar to those of
+\namee. The major additions are the two rules (\rref*{FD-tvarL,FD-tvarR}) for
+type variables, and \rref{FD-forall} for disjoint quantification.
+\Rref{FD-tvarL} and its symmetric one \rref*{FD-tvarR} both state that a type
+variable $[[X]]$ is disjoint with some type $[[B]]$ if and only if the
+disjointness constraint of $[[X]]$ in the context $[[DD]]$ is a subtype of
+$[[B]]$. These two rules are a specialization of a more general lemma, which
+says that disjointness is covariant with respect to subtyping. In a more precise
+sense, we have the following:
+
+\begin{lemma}[Covariance of disjointness] \label{lemma:covariance:disjoint}
+  If $[[DD |- A ** B]]$ and $[[B <: C]]$, then $[[DD |- A ** C]]$.
+\end{lemma}
+\begin{proof}
+  By double induction, first on the subtyping derivation, and then on the
+  type $[[A]]$. In the case for \rref{FS-forall}, we need \cref{lemma:narrow:disjoint}.
+\end{proof}
+
+\begin{lemma}[Narrowing of disjointness] \label{lemma:narrow:disjoint}
+  If $[[DD, X ** C1 |- A ** B]]$ and $[[C2 <: C1]]$, then $[[DD, X ** C2 |- A ** B]]$.
+\end{lemma}
+\begin{proof}
+  We need to slightly generalize the lemma in the sense that the type variable is inserted
+  in the middle, then by induction on the disjointness derivation.
+\end{proof}
+
+An intuition of the following may help better understanding
+\cref{lemma:covariance:disjoint}. As we will see in \cref{sec:category}, another
+way to interpret disjointness of two types is that their least upper bound is
+(isomorphic to) $[[Top]]$. Following this interpretation, it is obvious that if
+the least upper bound of two given types is already $[[Top]]$, a supertype of
+one of them will not change this fact.
+
+Let us now turn to \rref{FD-forall}. To illustrate this rule, consider the following two types:
+\begin{mathpar}
+  [[ \X ** nat . X & nat ]] \and  [[ \X ** char . X & char ]]
+\end{mathpar}
+Under what conditions are the two types disjoint? In the first type, $[[X]]$
+cannot be instantiated to $[[nat]]$ (among others) and in the second type
+$[[X]]$ cannot be instantiated to $[[char]]$. Therefore for both bodies to be disjoint,
+$[[X]]$ can only be instantiated to types that are disjoint with both $[[nat]]$
+and $[[char]]$. More formally, in \rref{FD-forall}, we add a new
+constraint by intersecting the two constraints to the context and check for disjointness
+in the extended context.
+
+\paragraph{Disjointness axioms.}
+
+Disjointness axioms $[[ A **a B ]]$  take care of two types with different type constructs,
+except for when one of them is $[[Top]]$, an intersection type or a type
+variable, which are all dealt with by the main judgment.
+
+To conclude this section, we show that disjointness is symmetric:
+
+\begin{lemma}[Symmetry of disjointness]
+  If $[[ DD |- A ** B  ]]$, then $[[  DD |- B ** A   ]]$.
+\end{lemma}
+\begin{proof}
+  By induction on the disjointness derivation. In the case for \rref{FD-forall},
+  apply \cref{lemma:narrow:disjoint}.
+\end{proof}
