--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -3,6 +3,13 @@
 \label{chap:traits}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\renewcommand\ottaltinferrule[4]{
+  \inferrule*[narrower=0.9,lab=#1,#2]
+    {#3}
+    {#4}
+}
+
+
 \input{Sources/Traits/introduction.tex}
 \input{Sources/Traits/overview.tex}
 \input{Sources/Traits/traits.tex}
