--- a/Sources/Poly/elaboration.tex
+++ b/Sources/Poly/elaboration.tex
@@ -129,3 +129,14 @@ As with \namee, we show two lemmas that relate \fnamee to \tnamee.
 \begin{proof}
   By structural induction on the derivation of typing.
 \end{proof}
+
+
+
+\paragraph{Algorithmic subtyping.}
+
+The algorithmic subtyping for \fnamee is a straightforward extension of \namee's
+algorithmic subtyping, since \rref{FS-forall} can be treated similarly to
+primitive types (e.g., \rref{A-nat}), as shown below:
+\[
+  \drule{A-forall}
+\]
